updated at: 2020-02-02 17:22, 【3Dモデル】オニガワラ社製アルファスーツ(スキニング済) - オニガワラインダストリ - BOOTH

--- a/VRChat/06/1084406.html
+++ b/VRChat/06/1084406.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オニガワラ社製アルファスーツ［スキニング済］ - オニガワラインダストリ - BOOTH
+      【3Dモデル】オニガワラ社製アルファスーツ(スキニング済) - オニガワラインダストリ - BOOTH
     </title>
     <meta name="description" content=
     "オニガワラ・インダストリの技術が詰まったアルファスーツです。 古代の忍者装束をモチーフとすることで、奥ゆかしさと現代技術が両立。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オニガワラ社製アルファスーツ［スキニング済］ - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済) - オニガワラインダストリ - BOOTH">
     <meta name="twitter:description" content=
     "オニガワラ・インダストリの技術が詰まったアルファスーツです。 古代の忍者装束をモチーフとすることで、奥ゆかしさと現代技術が両立。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/c7a21e7f-5865-4422-be42-0f3a0cd10d35_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オニガワラ社製アルファスーツ［スキニング済］ - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済) - オニガワラインダストリ - BOOTH">
     <meta property="og:description" content=
     "オニガワラ・インダストリの技術が詰まったアルファスーツです。 古代の忍者装束をモチーフとすることで、奥ゆかしさと現代技術が両立。">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          オニガワラ社製アルファスーツ［スキニング済］
+                          【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1084406"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オニガワラ社製アルファスーツ［スキニング済］ | オニガワラインダストリ"
+                          "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済) | オニガワラインダストリ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -257,17 +257,18 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製アルファスーツ［スキニング済］"
-                            class="market-item-detail-item-image"
-                            src=
+                            <img alt=
+                            "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)" class=
+                            "market-item-detail-item-image" src=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/c7a21e7f-5865-4422-be42-0f3a0cd10d35_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製アルファスーツ［スキニング済］"
-                            class="market-item-detail-item-image"
+                            <img alt=
+                            "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)" class=
+                            "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/b62ac35a-1e16-46a8-bb56-bae27f8a2871_base_resized.jpg">
                           </div>
@@ -275,8 +276,9 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製アルファスーツ［スキニング済］"
-                            class="market-item-detail-item-image"
+                            <img alt=
+                            "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)" class=
+                            "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/e6f09e85-c620-461d-9bec-be165a909843_base_resized.jpg">
                           </div>
@@ -284,8 +286,9 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製アルファスーツ［スキニング済］"
-                            class="market-item-detail-item-image"
+                            <img alt=
+                            "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)" class=
+                            "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/7f8c731c-9a94-41de-816e-75abb74cbfbc_base_resized.jpg">
                           </div>
@@ -293,8 +296,9 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オニガワラ社製アルファスーツ［スキニング済］"
-                            class="market-item-detail-item-image"
+                            <img alt=
+                            "【3Dモデル】オニガワラ社製アルファスーツ(スキニング済)" class=
+                            "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1084406/86531be4-776d-4513-8d02-6856bef68204_base_resized.jpg">
                           </div>
