updated at: 2020-02-03 01:01, VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH

--- a/VRChat/44/1258744.html
+++ b/VRChat/44/1258744.html
@@ -6,7 +6,7 @@
       VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.2.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1258744">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.2.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/7df9c25c-28cb-4437-abb9-0af3e031a3a4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRCAvatarEditor beta - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta property="og:description" content=
-    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.2.3">
+    "VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。 アバターがうつったモニターを確認しながら表情作成等をおこなえます。 現バージョン beta v0.3">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1258744/7df9c25c-28cb-4437-abb9-0af3e031a3a4_base_resized.jpg">
     <meta property="og:url" content=
@@ -181,9 +181,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "VRCAvatarEditor_beta_v0.2.3.zip"
+                                    "VRCAvatarEditor_beta_v0.3.zip"
                                     href=
-                                    "https://booth.pm/downloadables/537969">
+                                    "https://booth.pm/downloadables/888397">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -192,13 +192,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        VRCAvatarEditor_beta_v0.2.3
+                                        VRCAvatarEditor_beta_v0.3
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(218 KB)
+                                        &nbsp;(229 KB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -270,6 +270,55 @@
                               </div>
                             </div>
                           </li>
+                          <li class="variation-item">
+                            <div class="lo-grid lo-grid-top">
+                              <div class="variation-item-summary">
+                                <div class=
+                                "lo-grid u-align-items-center">
+                                  <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      旧版(v0.2.3)
+                                    </div>
+                                    <div class=
+                                    "variation-caption variation-caption--type">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 0
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <a class=
+                                    "btn add-cart full-length"
+                                    title=
+                                    "VRCAvatarEditor_beta_v0.2.3.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/537969">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        VRCAvatarEditor_beta_v0.2.3
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(218 KB)
+                                      </div>
+                                    </div></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
                         </ul>
                       </section>
                       <section>
@@ -317,7 +366,7 @@
                           <p class="autolink u-text-wrap">
                             VRChatで使用するアバターの作成・編集を支援するエディタ拡張ツールです。
                             アバターがうつったモニターを確認しながら表情作成等をおこなえます。
-                            現バージョン beta v0.2.3
+                            現バージョン beta v0.3
                           </p>
                         </div>
                       </section>
