--- a/VRChat/36/1223136.html
+++ b/VRChat/36/1223136.html
@@ -6,7 +6,7 @@
       VRCHATのほん - かぷち屋のぶーす - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1223136">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRCHATのほん - かぷち屋のぶーす - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRCHATのほん - かぷち屋のぶーす - BOOTH">
     <meta property="og:description" content=
-    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。">
+    "VRChatのかわいいフレンド達を描いたイラスト集を作りました! みんな可愛いので是非見てくださいね。 ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！ 全18ページ PDFファイル">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/ff63a157-73f2-4989-a3bf-f018c82be30a_base_resized.jpg">
     <meta property="og:url" content=
@@ -175,6 +175,9 @@
                                 <div class=
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      VRCHATのほん
+                                    </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
                                       発送までの日数：5日以内
@@ -222,6 +225,70 @@
                                         data-product-category="7"
                                         data-product-variant=
                                         "1901224" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
+                                      </div>
+                                    </form>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="variation-item">
+                            <div class="lo-grid lo-grid-top">
+                              <div class="variation-item-summary">
+                                <div class=
+                                "lo-grid u-align-items-center">
+                                  <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      VRCHATのほん＠電子書籍版
+                                    </div>
+                                    <div class=
+                                    "variation-caption variation-caption--type">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 500
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://capettiya.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1223136"
+                                      data-product-price="500"
+                                      data-product-brand=
+                                      "capettiya"
+                                      data-product-category="7"
+                                      data-product-variant=
+                                      "2887050" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="2887050"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1223136"
+                                        data-product-price="500"
+                                        data-product-brand=
+                                        "capettiya"
+                                        data-product-category="7"
+                                        data-product-variant=
+                                        "2887050" data-tracking=
                                         "add_item"
                                         data-product-list=
                                         "from market_show via market to add_item"
@@ -284,6 +351,15 @@
                             "https://booth.pximg.net/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/139792b1-9e31-4ca6-9780-e6bef37ca667_base_resized.jpg">
                           </div>
                         </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRCHATのほん" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/453730f7-13e6-4d25-91a9-fd2e2f6a50d4_base_resized.jpg">
+                          </div>
+                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -298,6 +374,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/139792b1-9e31-4ca6-9780-e6bef37ca667_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/1223136/453730f7-13e6-4d25-91a9-fd2e2f6a50d4_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -306,6 +386,8 @@
                           <p class="autolink u-text-wrap">
                             VRChatのかわいいフレンド達を描いたイラスト集を作りました!
                             みんな可愛いので是非見てくださいね。
+                            ‐‐‐‐‐‐2020/02/02追記‐‐‐‐‐‐ 電子書籍版追加しました！
+                            全18ページ PDFファイル
                           </p>
                         </div>
                       </section>
@@ -316,6 +398,48 @@
                     </div>
                   </div>
                 </div>
+                <section class="container">
+                  <div class="market-item-detail-tag-section">
+                    <div class="mobile-section">
+                      <h3 class="sectionhead">
+                        タグ
+                      </h3>
+                    </div>
+                    <div class="search-guide-nav">
+                      <div class="search-guide-slider-wrapper">
+                        <div class="search-guide-slider">
+                          <div class=
+                          "search-guide-slider-container">
+                            <a class="search-guide-tablet"
+                            data-tracking="click"
+                            data-product-list="from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/VRChat">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                VRChat
+                              </div>
+                            </div></a>
+                          </div>
+                        </div><a class=
+                        "search-guide-slider-nav right"></a><a class="search-guide-slider-nav left"></a>
+                      </div>
+                    </div>
+                    <div class="mobile-section">
+                      <div class="market-item-detail-search-link">
+                        <a class="btn negative" data-tracking=
+                        "click" data-product-list=
+                        "from market_show via tag_category_search to search_index"
+                        href=
+                        "https://booth.pm/ja/browse/%E3%82%A4%E3%83%A9%E3%82%B9%E3%83%88%E9%9B%86%E3%83%BBCG%E9%9B%86?q=VRChat">
+                        <div class="search-label">
+                          VRChat x イラスト集・CG集 で検索
+                        </div></a>
+                      </div>
+                    </div>
+                  </div>
+                </section>
               </div>
             </div>
           </article>
