updated at: 2020-02-03 02:09, 三次元模様シェーダー - やぎり水産 - BOOTH

--- a/VRChat/56/1220956.html
+++ b/VRChat/56/1220956.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      三次元模様シェーダー - yagiri's shop - BOOTH
+      三次元模様シェーダー - やぎり水産 - BOOTH
     </title>
     <meta name="description" content=
     "ピクセルの空間上での位置を元にメッシュ表面に模様を描画するマテリアル8種類セットです。 主にVRChatやUnityで使うことを想定しています。 適用するとUVが設定されていなくてもアニメーションする模様を付けられます。グラデーション色やサイズも変更可能です。">
@@ -13,14 +13,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "三次元模様シェーダー - yagiri's shop - BOOTH">
+    "三次元模様シェーダー - やぎり水産 - BOOTH">
     <meta name="twitter:description" content=
     "ピクセルの空間上での位置を元にメッシュ表面に模様を描画するマテリアル8種類セットです。 主にVRChatやUnityで使うことを想定しています。 適用するとUVが設定されていなくてもアニメーションする模様を付けられます。グラデーション色やサイズも変更可能です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/910241d5-1af1-4436-900f-d8989708958e/i/1220956/890d09b1-60cc-4b63-b65b-52c9f9827527_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content=
-    "三次元模様シェーダー - yagiri's shop - BOOTH">
+    <meta property="og:title" content="三次元模様シェーダー - やぎり水産 - BOOTH">
     <meta property="og:description" content=
     "ピクセルの空間上での位置を元にメッシュ表面に模様を描画するマテリアル8種類セットです。 主にVRChatやUnityで使うことを想定しています。 適用するとUVが設定されていなくてもアニメーションする模様を付けられます。グラデーション色やサイズも変更可能です。">
     <meta property="og:image" content=
@@ -121,11 +120,11 @@
                           href="https://yagiri.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="yagiri's shop" class=
+                            <img alt="やぎり水産" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2613389/icon_image/e20f9fbe-4291-4b42-b373-eeb31b14e760_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              yagiri's shop
+                              やぎり水産
                             </div>
                           </div></a>
                         </div>
@@ -208,7 +207,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1220956"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="三次元模様シェーダー | yagiri's shop"
+                          data-text="三次元模様シェーダー | やぎり水産"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
