updated at: 2020-02-03 16:09, 【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - Hirune&#39;s - BOOTH

--- a/VRChat/59/1146559.html
+++ b/VRChat/59/1146559.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - -
-      BOOTH
+      【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 -
+      Hirune's - BOOTH
     </title>
     <meta name="description" content=
     "●モデル説明 【3Dモデル】オフショルダーセーター ショートパンツ&amp;スパッツ - 着せ替え用コスチューム 制作者：ひるね ポリゴン数：△8866 マテリアル数：2個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） 3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません 他の改変可能な3Dモデルと組み合わせてご利用ください ※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - - BOOTH">
+    "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - Hirune's - BOOTH">
     <meta name="twitter:description" content=
     "●モデル説明 【3Dモデル】オフショルダーセーター ショートパンツ&amp;スパッツ - 着せ替え用コスチューム 制作者：ひるね ポリゴン数：△8866 マテリアル数：2個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） 3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません 他の改変可能な3Dモデルと組み合わせてご利用ください ※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/b03f328f-3b54-41f3-9394-ebcebd2feb57_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - - BOOTH">
+    "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム - ひるね屋 - Hirune's - BOOTH">
     <meta property="og:description" content=
     "●モデル説明 【3Dモデル】オフショルダーセーター ショートパンツ&amp;スパッツ - 着せ替え用コスチューム 制作者：ひるね ポリゴン数：△8866 マテリアル数：2個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） 3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません 他の改変可能な3Dモデルと組み合わせてご利用ください ※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ -
+                          【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ -
                           着せ替え用コスチューム
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -239,7 +239,7 @@
                           "https://booth.pm/ja/items/1146559"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム | ひるね屋 - Hirune's Shop"
+                          "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム | ひるね屋 - Hirune's Shop"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -259,7 +259,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/b03f328f-3b54-41f3-9394-ebcebd2feb57_base_resized.jpg">
@@ -269,7 +269,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/e73d9ccf-88c4-4674-9e9f-dcd023135f51_base_resized.jpg">
@@ -279,7 +279,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/69f032a3-983e-47be-9608-19ba95b80141_base_resized.jpg">
@@ -289,7 +289,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/00513db4-b635-497e-9a0c-98124ca23a43_base_resized.jpg">
@@ -299,7 +299,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/fb3b1be7-d4d7-4064-aa1f-f32cc66a450f_base_resized.jpg">
@@ -309,7 +309,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
+                            "【素体付き】オフショルダーセーター　ショートパンツ&amp;スパッツ - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/160c2141-5e2c-40d7-9907-532a48ade8a6_base_resized.jpg">
