updated at: 2020-02-03 16:57, スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 - Minuet_Doll - BOOTH

--- a/VRChat/45/1122845.html
+++ b/VRChat/45/1122845.html
@@ -5,8 +5,7 @@
     <title>
       スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 - Minuet_Doll - BOOTH
     </title>
-    <meta name="description" content=
-    "当モデルは、私Minuet_Dollが過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDステージ配布】スノードームステージ 聖夜のツリー http://seiga.nicovideo.jp/seiga/im6263043">
+    <meta name="description" content=".">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1122845">
@@ -14,15 +13,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
     "スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 - Minuet_Doll - BOOTH">
-    <meta name="twitter:description" content=
-    "当モデルは、私Minuet_Dollが過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDステージ配布】スノードームステージ 聖夜のツリー http://seiga.nicovideo.jp/seiga/im6263043">
+    <meta name="twitter:description" content=".">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1122845/c4802eb0-adb3-40e0-9eeb-42f06ae6e761_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "スノードームステージ聖夜のツリー（VRCワールド版） ver1.1 - Minuet_Doll - BOOTH">
-    <meta property="og:description" content=
-    "当モデルは、私Minuet_Dollが過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。 MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。 【MMDステージ配布】スノードームステージ 聖夜のツリー http://seiga.nicovideo.jp/seiga/im6263043">
+    <meta property="og:description" content=".">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1122845/c4802eb0-adb3-40e0-9eeb-42f06ae6e761_base_resized.jpg">
     <meta property="og:url" content=
@@ -291,54 +288,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            当モデルは、私Minuet_Dollが過去になつか（現72ca）の名義でMikuMikuDance用に制作配布したモデルをVRChat（ワールド）での利用を想定して再調整したセッティング済のワールドデータです。元々はMikuMikuDance用のモデルの再利用であり、ワールドデータ化にあたり容量の削減までには手が回っておりませんことをあらかじめご了承ください。
-                            MikuMikuDance用モデルは現在も下記URL先で無料ダウンロードできます。
-                            【MMDステージ配布】スノードームステージ 聖夜のツリー
-                            http://seiga.nicovideo.jp/seiga/im6263043
-                            主な違いとしては、上記MikuMikuDance用モデルが商用利用不可であることに対し当モデル「スノードームステージ聖夜のツリー（VRCワールド版）」は収益化等の商用利用が可能となっております。詳しくは利用規約をご確認ください。
-                            上記MikuMikuDance用モデルはunitypackage化に伴い規約改定予定ですため、ご了承ください。2019/03/07追記
-                            【アップロード方法】
-                            詳しくは同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。
-                            http://minuetdoll.info/72ca_snowdometree_manual/
-                            【利用規約】
-                            同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。
-                            http://minuetdoll.info/3d/ 【追加・承諾事項】
-                            「スノードームステージ聖夜のツリー（VRCワールド版）」を含むワールドデータ（改造、改変の有無、3Dモデルの一部であるか、全部であるかに関わらず）をサーバーにアップロードし、商品を購入していない第三者を招待したり、VRChatにPublic化の申請を行うことは、Minuet_Doll3Dモデル利用規約
-                            第4条　第4項の以下禁止行為には抵触しないものとします。 　＞(1)
-                            商品である3Dモデル（改造、改変の有無、一部であるか全部であるかを問いません。）を配布、転載、その他商品を購入していない第三者が商品を使用できる状態にすること。
-                            【シェーダーについて】
-                            各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。
-                            ・お休みさん様の「ガラス球向けガラスシェーダーVer.0.1」（テスト公開版を使用させて頂いております）
-                            https://oyasumisan.booth.pm/items/1118922
-                            ・みに様の「まんまるしぇーだー_ver_1.3」
-                            https://www.dropbox.com/sh/dp8b6ltr8ifgsw2/AAAwe9qWmfNLUFpNmPSE0fIga?dl=0
-                            ・Materialsフォルダ内の「ClearShader_Modified」は、Es様のブログ「しゅみぷろ」（http://esprog.hatenablog.com/）内の記事、「シンプルなMatcapシェーダーを書いてみる
-                            」
-                            http://esprog.hatenablog.com/entry/2017/01/28/231735
-                            のコードを参考にさせて頂き、お休みさん、phi16様のご協力のもとに生成されたシェーダーです。
-                            「ClearShader_Modified」のみの使用、「ClearShader_Modified」の再配布は禁止とさせて頂きます。
-                            【内容】 72ca_snowdometree_ver1.1 ├fbx
-                            ｜｜└Texture（スノードームのテクスチャ　ファイル数30） ｜｜
-                            sky.fbx（夜空のfbxモデル） ｜└
-                            snowdometree_gold_ver1.1.fbx（スノードームのfbxモデル）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約（オンライン規約）（ご利用の際は最新の利用規約をご覧ください）
-                            ｜
-                            Minuet_Doll3Dモデル利用規約.txt（サーバーが通常通り機能しない場合はご確認ください）
-                            ｜
-                            ReadMe（ガラス球向けガラスシェーダーVer.0.1）（同梱させて頂いたお休みさん様のシェーダーのReadmeです）
-                            ｜
-                            Readme（まんまるしぇーだー_ver_1.3）.txt（同梱させて頂いたみに様のシェーダーのReadmeです）
-                            ｜ アップロードの手引き（モデルアップロードの際にはご活用ください） ｜
-                            はじめに.txt（このファイル） └
-                            スノードームステージ聖夜のツリー（VRCワールド版）.unitypackage
-                            （本体） 【更新履歴】
-                            2018/12/16　ver1.1　BlueprintIDを削除しました。
-                            2018/12/02　ver1.0　販売開始
-                            2018/11/30　verβ　テスト配布 【制作】
-                            Minuet_Doll×72ca
-                            http://minuetdoll.info/
-                            https://twitter.com/Minuet_Doll
+                            .
                           </p>
                         </div>
                       </section>
