updated at: 2020-02-03 17:03, 【素体付き】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune&#39;s Shop - BOOTH

--- a/VRChat/97/1113097.html
+++ b/VRChat/97/1113097.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【3Dモデル】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop -
+      【素体付き】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop -
       BOOTH
     </title>
     <meta name="description" content=
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dモデル】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop - BOOTH">
+    "【素体付き】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop - BOOTH">
     <meta name="twitter:description" content=
     "●モデル説明 【3Dモデル】Star siesta - 着せ替え用コスチューム 制作者：ひるね ポリゴン数：△10096 マテリアル数：4個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） 3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません 他の改変可能な3Dモデルと組み合わせてご利用ください ※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします ●内容物 ・Star">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/a6a12f50-7cd1-43f7-88af-c0aa6cedaad4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dモデル】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop - BOOTH">
+    "【素体付き】Star siesta - 着せ替え用コスチューム - ひるね屋 - Hirune's Shop - BOOTH">
     <meta property="og:description" content=
     "●モデル説明 【3Dモデル】Star siesta - 着せ替え用コスチューム 制作者：ひるね ポリゴン数：△10096 マテリアル数：4個 VRChat用のhumanoid対応 フルボディトラッキング対応 デスクトップモーション対応モデル同梱 （VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています） 3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません 他の改変可能な3Dモデルと組み合わせてご利用ください ※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします ●内容物 ・Star">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【3Dモデル】Star siesta - 着せ替え用コスチューム
+                          【素体付き】Star siesta - 着せ替え用コスチューム
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1113097"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【3Dモデル】Star siesta - 着せ替え用コスチューム | ひるね屋 - Hirune's Shop"
+                          "【素体付き】Star siesta - 着せ替え用コスチューム | ひるね屋 - Hirune's Shop"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -258,7 +258,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/a6a12f50-7cd1-43f7-88af-c0aa6cedaad4_base_resized.jpg">
@@ -268,7 +268,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/59b7b9ce-e359-4995-942b-10182732d8f0_base_resized.jpg">
@@ -278,7 +278,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/0f1bf315-95e1-452b-a6d2-21655d1639ad_base_resized.jpg">
@@ -288,7 +288,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/4d3f2372-ed3c-474c-be33-307f6243d25e_base_resized.jpg">
@@ -298,7 +298,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/3faf1785-305b-4c62-853b-7757c2614590_base_resized.jpg">
@@ -308,7 +308,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "【3Dモデル】Star siesta - 着せ替え用コスチューム"
+                            "【素体付き】Star siesta - 着せ替え用コスチューム"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/4d603a5d-0611-4e3c-833c-41454379f04e/i/1113097/98498426-8f27-4402-80ee-93531247a09a_base_resized.jpg">
